--- a/content/publication/mypubs.bib
+++ b/content/publication/mypubs.bib
@@ -1,105 +1,82 @@
-@inproceedings{Ortiz2008,
-address = {Santiago},
-author = {Ortiz, Juli{\'{a}}n and Sep{\'{u}}lveda, Exequiel and Barber{\'{a}}n, Antonio and Emery, Xavier and Magri, Eduardo},
-booktitle = {III International Conf erence on Mining Innova tion},
-editor = {Arias, Jaime and Castro, Raul and Golosinski, Tadeusz},
-pages = {57--67},
-title = {{Innovations in Software Development for Resource Evaluation}},
-year = {2008}
+@unpublished{Garrido2020,
+abstract = {The access to real geometallurgical data is very limited in practice, making it difficult for practitioners, researchers and students to test methods, models and re- produce results in the field of geometallurgy. The aim of this work is to propose a methodology to simulate geometallurgical data with geostatistical tools preserving the coherent relationship among primary attributes, such as grades and geological attributes, with mineralogy and some response attributes, for example, grindability, throughput, kinetic flotation performance and recovery. The methodology is based in three main components: (i) definition of spatial relationship between Geomet- allurgical units, (ii) co-simulation of regionalized variables with geometallurgical coherence, and (iii) simulation of georeferenced drillholes based on geometrical and operational constraints. The simulated geometallurgical drillholes generated look very realistic, and they are consistent with the input statistics, coherent in terms of geology and mineralogy, and produce realistic processing metallurgical perfor- mance responses. These simulations can be used for several purposes, for example, benchmarking geometallurgical modelling methods and mine planning optimiza- tion solvers, or performing risk assessment under different blending schemes. 1},
+author = {Garrido, Mauricio and Sep{\'{u}}lveda, Exequiel and Ortiz, Juli{\'{a}}n and Townley, Brian},
+file = {:home/a1634120/pCloudDrive/publications/journal/garrido{\_}GMDB{\_}2020/article.pdf:pdf},
+pages = {1--24},
+title = {{A Methodology for the Simulation of Synthetic Exploration and Geometallurgical Database for Educational Purposes}},
+year = {2020}
 }
-@article{Sepulveda2018a,
-abstract = {{\textcopyright} 2018 Institute of Materials, Minerals and Mining and The AusIMM Published by Taylor  {\&}  Francis on behalf of the Institute and The AusIMM The incorporation of the uncertainties of geometallurgical variables in mine planning provides new opportunities for decision-makers to analyse, compare and choose among many scenarios to achieve an optimal balance between economic and operational objectives. This research focuses on maximising economic return and minimising the risk arising from the uncertainty associated with geometallurgical variables. We formulate two-objective optimisation problems based on an underground mining operation. The first objective is the maximisation of the Net Smelter Return, which includes penalties associated with deleterious elements in concentrates. Four different objectives were tested as candidates for the second objective: Volatility, Value at Risk, Conditional Value at Risk and deviation from the planned production target. The first three are measures of economic risk and the fourth is a measure of operational risk. Uncertainties in metal grades, geometallurgical recoveries and grades in concentrate are included in the proposed model. Our results demonstrate that geometallurgical uncertainties can be successfully integrated into production scheduling optimisation in a multi-objective approach and the problem can be solved using genetic algorithms to yield useful conclusions to support the decision-making process.},
-author = {Sep{\'{u}}lveda, E. and Dowd, P.A. and Xu, C.},
+@inproceedings{Garrido2019,
+abstract = {Public reports are prepared to inform investors or potential investors and their advisers on exploration results, mineral resources or mineral reserves. To convert mineral resources to mineral reserves, mineral processing and geometallurgical factors are used. The International Reporting Template (IRT) is a document that represents the best of the CRIRSCO-style codes: reporting standards that are recognized and adopted world-wide for market-related reporting and financial investment. In this reporting, geometallurgy represents a key component in the checklist for reserve assessments and reporting criteria: (1) mining factors or assumptions: in order to demonstrate realistic potential for eventual economic extraction, (2) metallurgical factors or assumptions: to demonstrate realistic potential for eventual economic and optimal extraction, (3) study status of mineral reserves for all modifying factors that have been considered and (4) cut-off parameters: the cut-off parameters may be economic value per-block rather than grade, and the costs of processing a block depends on geometallurgical parameters. An overview of good practice to estimation and modelling techniques of geometallurgical data is given. A discussion is provided that of ore-type definition, types of test samples are critical, density of sampling per geometallurgical domain, relationship between mineral characterization and behavior of mineral processing to support geometallurgical modelling (some multivariable tools are proposed), how geometallurgical modelling supports the long term scheduling (costs, efficiency, recovery and mineral mixing among others); and simulations of geometallurgical scenarios to quantify uncertainty and risk of mineral processing. Currently, no guide exists for the construction of geometallurgical models and their management in the quantification of reserves, therefore, this research supports companies that declare mining reserves in bankability studies and private consultants that generate this type of reports.},
+address = {Santiago, Chile},
+author = {Garrido, Mauricio and Townley, Brian},
+booktitle = {15th International Mineral Processing Conference and 6th International Seminar on Geometallurgy},
+doi = {10.6084/m9.figshare.11290538},
+file = {:home/a1634120/Downloads/Anoverviewofgoodpracticesintheuseofgeometallurgytosupportminingreservesincoppersulfidesdeposits.pdf:pdf},
+number = {November},
+title = {{An overview of good practices in the use of geometallurgy to support mining reserves in copper sulfides deposits}},
+year = {2019}
+}
+@article{Addo2019,
+abstract = {The accurate modelling of geometallurgical data can significantly improve decision-making and help optimize mining operations. This case study compares models for predicting copper recovery from three indirect test measurements that are typically available, to avoid the cost of direct measurement of recovery. Geometallurgical data from 930 drill core samples, with an average length of 19 m, from an orebody in South America have been analysed. The data includes copper recovery and the results of three other tests: Bond mill index test; resistance to abrasion and breakage index; and semi-autogenous grinding power index test. A genetic algorithm is used to impute missing data at some locations so as to make use of all 930 samples. The distribution of the variables is modelled with D-vine copula and predictions of copper recovery are compared with those from regressions fitted by ordinary least squares and generalized least squares. The D-vine copula model had the least mean absolute error.},
+author = {Addo, E. and Metcalfe, A. V. and Chanda, E. K. and Sepulveda, E. and Assibey-Bonsu, W. and Adeli, A.},
+doi = {10.17159/24119717/319/2019},
+file = {:home/a1634120/Downloads/Manuscript.pdf:pdf},
+issn = {22256253},
+journal = {Journal of the Southern African Institute of Mining and Metallurgy},
+keywords = {Copula,Geometallurgy,Mining,Modelling,Regression},
+number = {4},
+pages = {339--346},
+title = {{Prediction of copper recovery from geometallurgical data using D-vine copulas}},
+volume = {119},
+year = {2019}
+}
+@inproceedings{Garrido2018,
+abstract = {The access to real geometallurgical block models is very limited in practice, making difficult for practitioners, researchers and students to test methods, models and reproduce results in the field of geometallurgy. The aim of this work is to propose a methodology to simulate synthetic geometallurgical block models with geostatistical tools preserving the coherent relationship among primary attributes, such as grades and geology, with mineralogy and some response attributes, for example, grindability, throughput, kinetic flotation performance and recovery. The methodology is based in three main components: (i) multivariate geostatistics, (ii) froth flotation simulation models, and (iii) well known performance plant parameters. The simulated geometallurgical block models look very realistic, and they are coherent in terms of geology and mineralogy, and processing metallurgical performance responses are consistent with what is seen in practice. These simulations can be used for several proposes, for example, benchmarking geometallurgical modelling methods and mine planning optimization solvers. Simulations at small scales also serve to represent drill holes campaigns and generate sample dataset incorporating geometallurgical attributes and real spatial variability. The methodology is completely reproducible with no use of proprietary models or methods. Implementations of all methods can be found in public domain software, and different ore body types may be incorporated with little effort.},
+author = {Garrido, Mauricio and Sepulveda, Exequiel and Ortiz, Julian and Navarro, Felipe and Townley, Brian},
+booktitle = {Procemin 14th International Mineral Processing Conference (PROCEMIN). 5th Intenrational Seminar on Geometallurgy (GEOMET)},
+file = {:home/a1634120/extrahd/Mendeley Desktop/2018 - Garrido et al. - A Methodology for the Simulation of Synthetic Geometallurgical Block Models of Porphyry Ore Bodies.pdf:pdf},
+number = {December},
+pages = {1--10},
+title = {{A Methodology for the Simulation of Synthetic Geometallurgical Block Models of Porphyry Ore Bodies}},
+year = {2018}
+}
+@article{sepulveda2018geomet,
+abstract = {The incorporation of the uncertainties of geometallurgical variables in mine planning provides new opportunities for decision-makers to analyse, compare and choose among many scenarios to achieve an optimal balance between economic and operational objectives. This research focuses on maximising economic return and minimising the risk arising from the uncertainty associated with geometallurgical variables. We formulate two-objective optimisation problems based on an underground mining operation. The first objective is the maximisation of the Net Smelter Return, which includes penalties associated with deleterious elements in concentrates. Four different objectives were tested as candidates for the second objective: Volatility, Value at Risk, Conditional Value at Risk and deviation from the planned production target. The first three are measures of economic risk and the fourth is a measure of operational risk. Uncertainties in metal grades, geometallurgical recoveries and grades in concentrate are included in the proposed model. Our results demonstrate that geometallurgical uncertainties can be successfully integrated into production scheduling optimisation in a multi-objective approach and the problem can be solved using genetic algorithms to yield useful conclusions to support the decision-making process.},
+author = {Sep{\'{u}}lveda, Exequiel and Dowd, P.A. and Xu, Chaoshui},
 doi = {10.1080/25726668.2018.1442648},
+file = {:home/a1634120/extrahd/Mendeley Desktop/2018 - Sep{\'{u}}lveda, Dowd, Xu - The optimisation of block caving production scheduling with geometallurgical uncertainty – a multi-objec.pdf:pdf},
 issn = {25726676},
 journal = {Mining Technology: Transactions of the Institute of Mining and Metallurgy},
 keywords = {Geometallurgy,block caving,multi-objective optimisation,production scheduling optimisation,risk assessment,uncertainty},
+number = {3},
+pages = {131--145},
 title = {{The optimisation of block caving production scheduling with geometallurgical uncertainty – a multi-objective approach}},
+volume = {127},
 year = {2018}
 }
-@article{Perez2015,
-abstract = {The wear rate of working tools during the cutting and drilling of rocks is closely related to the abrasiveness of those rocks. As the contact area of the tools increases, due to wear, the specific cutting energy will also increase, and that directly affects the overall consumption of excavation tools. A new artificial intelligence (AI) based model has been developed. It utilizes acoustic emission (AE) and rock properties as main indicators of rock abrasivity, estimated by Cerchar Abrasivity Index (CAI). AE sensors are attached to both the Cerchar testing apparatus and the rock in question while conducting scratch tests using hardened steel pins of 42 and 56 HRC. Prior to the implementation of Artificial Neural Network (ANN) modeling, the selection of independent variables was carried out via Gamma test and V-ratio analyses. As a result, AE parameters, such as total number of events and root mean square of signal, in addition to testing parameters (i.e. uniaxial compressive strength, Young[U+05F3]s Modulus, quartz content and pin hardness) are found to be the optimum model input combination needed to accurately predict CAI.},
-author = {Perez, S. and Karakus, M. and Sepulveda, E.},
-doi = {10.1016/j.wear.2015.10.006},
-file = {:Users/esepulveda/Dropbox/Mendeley/Perez, Karakus, Sepulveda - 2015 - A preliminary study on the role of acoustic emission on inferring Cerchar abrasivity index of rock(2).pdf:pdf},
-isbn = {0043-1648},
-issn = {00431648},
-journal = {Wear},
-keywords = {Acoustic emissions,Artificial neural networks,Cerchar abrasivity index,Rock abrasivity,Tool condition monitoring},
-pages = {1--8},
-publisher = {Elsevier},
-title = {{A preliminary study on the role of acoustic emission on inferring Cerchar abrasivity index of rocks using artificial neural network}},
-url = {http://dx.doi.org/10.1016/j.wear.2015.10.006},
-volume = {344-345},
-year = {2015}
-}
-@inproceedings{Sepulveda2010,
-address = {Santiago},
-author = {Sep{\'{u}}lveda, Exequiel and Magri, Eduardo and Ortiz, Juli{\'{a}}n},
-booktitle = {The Fourth International Conference on Mining Innovation},
-editor = {Castro, Raul and Emery, Xavier and Kuyvenhoven, Romke},
-file = {:Users/esepulveda/Dropbox/Mendeley/Sep{\'{u}}lveda, Magri, Ortiz - 2010 - DISTRIBUTED-MULTIPROCESS IMPLEMENTATION OF KRIGING.pdf:pdf},
-pages = {49},
-title = {{DISTRIBUTED-MULTIPROCESS IMPLEMENTATION OF KRIGING}},
-year = {2010}
-}
-@inproceedings{Sepulveda2010a,
-address = {Buenos Aires},
-author = {Sep{\'{u}}lveda, Exequiel and Munoz, Felipe},
-booktitle = {High Performace Computing - LATAM},
-file = {:Users/esepulveda/Dropbox/Mendeley/Sep{\'{u}}lveda, Munoz - 2010 - Hybrid KNN Algorithm using CPU and GPU applied on 3D data.pdf:pdf},
-pages = {3229--3233},
-title = {{Hybrid KNN Algorithm using CPU and GPU applied on 3D data}},
-year = {2010}
-}
-@article{Sepulveda2018,
+@article{sepulveda2018clustering,
+abstract = {This paper describes a proposed method for clustering attributes on the basis of their spatial variability and the uncertainty of cluster member- ship. The method is applied to geometallurgical domaining in mining ap- plications. The main objective of geometallurgical clustering is to ensure consistent feed to a processing plant by minimising transitions between different types of feed coming from different domains (clusters). For this purpose, clusters should contain not only similar geometallurgical char- acteristics but also be located in as few contiguous and compact spatial locations as possible so as to maximise the homogeneity of ore delivered to the plant. Most existing clustering methods applied to geometallurgy have two problems. Firstly, they are unable to differentiate subsets of attributes at the cluster level and therefore cluster membership can only be assigned on the basis of exactly identical attributes, which may not be the case in practice. Secondly, as they do not take account of the spatial relationships they can produce clusters which may be spatially dispersed and/or overlapped. In the work described in this paper a new clustering method is introduced that integrates three distinct steps to ensure qual- ity clustering. In the first step, fuzzy membership information is used to minimise compactness and maximise separation. In the second step, the best subsets of attributes are defined and applied for domaining purposes. These two steps are iterated to convergence. In the final step a graph- based labelling method, which takes spatial constraints into account, is used to produce the final clusters. Three examples are presented to illus- trate the application of the proposed method. These examples demon- strate that the proposed method can reveal useful relationships among geometallurgical attributes within a clear and compact spatial structure. The resulting clusters can be used directly in mine planning to optimise the ore feed to be delivered to the processing plant.},
 author = {Sep{\'{u}}lveda, Exequiel and Dowd, Peter A and Xu, Chaosui},
 doi = {10.1007/s11004-018-9751-0},
-file = {:Users/esepulveda/Dropbox/Mendeley/Sep{\'{u}}lveda, Dowd, Xu - 2018 - Fuzzy clustering with spatial correction and its application to geometallurgical domaining.pdf:pdf},
+file = {:home/a1634120/extrahd/Mendeley Desktop/2018 - Sep{\'{u}}lveda, Dowd, Xu - Fuzzy clustering with spatial correction and its application to geometallurgical domaining.pdf:pdf},
 journal = {Mathematical Geosciences},
+mendeley-groups = {CRC Ore,Clustering/spatial},
 number = {8},
 pages = {895--928},
 title = {{Fuzzy clustering with spatial correction and its application to geometallurgical domaining}},
 volume = {50},
 year = {2018}
 }
-@inproceedings{Baeza2012,
-abstract = {Simulation of continuous variables is an important aspect in the construction of numerical models of Earth Sciences variables. In many cases, there is a need for high resolution models either to model large volumes or surfaces, or to characterize on a very dense grid some spatial phenomena. Traditional simulation algorithms such as turning bands and sequential Gaussian simulation must be adapted to handle such large models and to perform the computations in a reasonable time. Parallelization requires a review of the algorithm design. We present the changes and performance improvements of parallelizing the turning bands algorithm using graphical processing units (GPU). Our implementation focuses on parallelization of the unconditional simulation step. One example is presented comparing the performance of a serial simulation implementation versus our parallelized implementation of turning bands. Speed ups of up to 60 are reached and an analysis of possible additional improvements is presented.},
-author = {Baeza, Daniel and Sep{\'{u}}lveda, Exequiel and Ortiz, Juli{\'{a}}n},
-booktitle = {The Second European Conference on Geostatistics for Environmental Applications},
-pages = {7--11},
-title = {{Parallelization of simulation algorithm with GPU for constructing high- resolution models of Earth Sciences variables}},
-year = {2012}
-}
-@inproceedings{Garrido2017,
-abstract = {Mine planning in open pit defines the material to be extracted, when it will be extracted and its destination. Conventional scheduling usually considers block values based on geological parameters such as grade of the metal of interest, its mineralogy, and parameters external to geology. The latter parameters correspond, for example, to economic parameters, opportunity costs, types of plant and plant processes. The scope of this research is to consider geometallurgical constraints into the optimization problem known in mine planning as constrained pit limit problem (CPIT). In the last years, numerous works have proven that there is a strong effect of clays on the flotation recovery process (chalcopyrite or bornite minerals). This impact generates operational problems that, if not controlled, can decrease metallurgical recovery. For example, due to clays are usually soft rocks, the grinding time is modified, thus, the recovery which is related to the granulometry. In addition, clays increase the costs associated on water input, since they require additional consumption to obtain the expected recovery. All these factors can be handled over long periods of time, but in short times operation the response is not as immediate and effective as required to be economical. In this work, we propose a methodology which add a homogeneity condition to the optimization problem. It consists in the extraction of minerals with similar geometallurgical properties (in this case, the modeled amount of clay) on each period, and therefore the operational parameters in the plant would remain relatively the same. The algorithm was applied to a case study where zones with different levels of alteration and clay content were modeled. The valuation considered standard economic parameters of the mining industry.},
-author = {Garrido, Mauricio and Sepulveda, Exequiel and Navarro, Felipe},
-booktitle = {Fifth International Seminar on Mine PLanning},
-file = {:Users/esepulveda/Dropbox/Mendeley/Garrido, Sepulveda, Navarro - 2017 - Optimization of planning and scheduling of ore body with open pit extraction considering homogeneit.pdf:pdf},
-number = {August},
-pages = {294--300},
-title = {{Optimization of planning and scheduling of ore body with open pit extraction considering homogeneity in clays as geometallurgical}},
-year = {2017}
-}
-@article{Perez2015a,
-abstract = {The wear rate of working tools during the cutting and drilling of rocks is closely related to the abrasiveness of those rocks. As the contact area of the tools increases, due to wear, the specific cutting energy will also increase, and that directly affects the overall consumption of excavation tools. A new artificial intelligence (AI) based model has been developed. It utilizes acoustic emission (AE) and rock properties as main indicators of rock abrasivity, estimated by Cerchar Abrasivity Index (CAI). AE sensors are attached to both the Cerchar testing apparatus and the rock in question while conducting scratch tests using hardened steel pins of 42 and 56 HRC. Prior to the implementation of Artificial Neural Network (ANN) modeling, the selection of independent variables was carried out via Gamma test and V-ratio analyses. As a result, AE parameters, such as total number of events and root mean square of signal, in addition to testing parameters (i.e. uniaxial compressive strength, Young[U+05F3]s Modulus, quartz content and pin hardness) are found to be the optimum model input combination needed to accurately predict CAI.},
-author = {Perez, S. and Karakus, M. and Sepulveda, E.},
-doi = {10.1016/j.wear.2015.10.006},
-file = {:Users/esepulveda/Dropbox/Mendeley/Perez, Karakus, Sepulveda - 2015 - A preliminary study on the role of acoustic emission on inferring Cerchar abrasivity index of rocks u.pdf:pdf},
-issn = {00431648},
-journal = {Wear},
-keywords = {Acoustic emissions,Artificial neural networks,Cerchar abrasivity index,Rock abrasivity,Tool condition monitoring},
-title = {{A preliminary study on the role of acoustic emission on inferring Cerchar abrasivity index of rocks using artificial neural network}},
-year = {2015}
-}
-@article{Sepulveda2016,
+@article{sepulveda2016ppr,
 abstract = {The integration of geological and geometallurgical data can significantly improve decision-making and optimize mining production due to a better understanding of the resources and their metallurgical performances. The primary-response rock property framework is an approach to the modelling of geometallurgy in which quantitative and qualitative primary properties are used as proxies of metallurgical responses. Within this framework, primary variables are used to fit regression models to predict metallurgical responses. Whilst primary rock property data are relatively abundant, metallurgical response property data are not, which makes it difficult to establish predictive response relationships. Relationships between primary input variables and geometallurgical responses are, in general, complex, and the response variables are often non-additive which further complicates the prediction process. Consequently, in many cases, the traditional multivariate linear regression models (MLR) of primary-response relationships perform poorly and a better alternative is required for prediction. Projection pursuit is a powerful exploratory statistical modelling technique in which data from a number of variables are projected onto a set of directions that optimize the fit of the model. The purpose of the projection is to reveal underlying relationships. Projection pursuit regression (PPR) fits standard regression models to the projected data vectors. In this paper, PPR is applied to the modelling of geometallurgical response variables. A case study with six geometallurgical variables is used to demonstrate the modelling approach. The results from the proposed PPR models show a significant improvement over those from MLR models. In addition, the models were bootstrapped to generate distributions of feasible scenarios for the response variables. Our results show that PPR is a robust technique for modelling geometallurgical response variables and for assessing the uncertainty associated with these variables.},
 author = {Sepulveda, Exequiel and Dowd, Peter A. and Xu, Chaoshui and Addo, Emmanuel and Sep{\'{u}}lveda, Exequiel and Dowd, Peter A. and Xu, Chaoshui and Addo, Emmanuel},
 doi = {10.1007/s11004-016-9660-z},
-file = {:Users/esepulveda/Dropbox/Mendeley//Sepulveda et al. - 2017 - Multivariate Modelling of Geometallurgical Variables by Projection Pursuit.pdf:pdf},
+file = {:home/a1634120/extrahd/Mendeley Desktop//2017 - Sepulveda et al. - Multivariate Modelling of Geometallurgical Variables by Projection Pursuit.pdf:pdf},
 issn = {1874-8953},
 journal = {Mathematical Geosciences},
-keywords = {,Projection pursuit re,[Geometallurgical modelling},
+keywords = {Projection pursuit re,[Geometallurgical modelling},
+mendeley-groups = {Paper{\#}3,Projection Pursuit,Geometallurgy},
 number = {1},
 pages = {121--143},
 title = {{Multivariate Modelling of Geometallurgical Variables by Projection Pursuit}},
@@ -107,13 +84,80 @@ url = {http://dx.doi.org/10.1007/s11004-016-9660-z},
 volume = {46},
 year = {2017}
 }
-@inproceedings{Sepulveda2015,
+@inproceedings{garrido2017geometdilution,
+abstract = {Mine planning in open pit defines the material to be extracted, when it will be extracted and its destination. Conventional scheduling usually considers block values based on geological parameters such as grade of the metal of interest, its mineralogy, and parameters external to geology. The latter parameters correspond, for example, to economic parameters, opportunity costs, types of plant and plant processes. The scope of this research is to consider geometallurgical constraints into the optimization problem known in mine planning as constrained pit limit problem (CPIT). In the last years, numerous works have proven that there is a strong effect of clays on the flotation recovery process (chalcopyrite or bornite minerals). This impact generates operational problems that, if not controlled, can decrease metallurgical recovery. For example, due to clays are usually soft rocks, the grinding time is modified, thus, the recovery which is related to the granulometry. In addition, clays increase the costs associated on water input, since they require additional consumption to obtain the expected recovery. All these factors can be handled over long periods of time, but in short times operation the response is not as immediate and effective as required to be economical. In this work, we propose a methodology which add a homogeneity condition to the optimization problem. It consists in the extraction of minerals with similar geometallurgical properties (in this case, the modeled amount of clay) on each period, and therefore the operational parameters in the plant would remain relatively the same. The algorithm was applied to a case study where zones with different levels of alteration and clay content were modeled. The valuation considered standard economic parameters of the mining industry.},
+address = {Santiago,Chile},
+author = {Garrido, Mauricio and Sep{\'{u}}lveda, Exequiel and Navarro, Felipe},
+booktitle = {Fifth International Seminar on Mine PLanning},
+file = {:home/a1634120/extrahd/Mendeley Desktop//2017 - Garrido, Sep{\'{u}}lveda, Navarro - Optimization of planning and scheduling of ore body with open pit extraction considering homogenei.pdf:pdf;:home/a1634120/extrahd/Mendeley Desktop//2017 - Garrido, Sep{\'{u}}lveda, Navarro - Optimization of planning and scheduling of ore body with open pit extraction considering homogenei.pdf:pdf},
+mendeley-groups = {Paper{\#}3,Geometallurgy},
+number = {August},
+pages = {294--300},
+title = {{Optimization of planning and scheduling of ore body with open pit extraction considering homogeneity in clays as geometallurgical}},
+year = {2017}
+}
+@inproceedings{sepulveda2015ppr,
 abstract = {Geometallurgy is an inter-disciplinary approach to improving decision-making and optimising production in the mining industry by integrating geological and metallurgical data and knowledge. Improvements come from a better understanding of the resources and their metallurgical performance and by optimising over the complete mining value chain. The primary-response rock property framework is an approach to geometallurgy in which primary properties such as grades, lithology, alteration and mineralogy are proxies of important metallurgical responses; for example, recovery, comminution and energy use. Using this framework, primary variables are used to predict key response variables. Primary rock properties, typically geological, geotechnical and structural, are relatively abundant compared with metallurgical response properties, making the integration of the latter more difficult. Moreover, the relationship between geometallurgical input variables and their processing responses is usually complex and the response variables are often non-additive which complicates the prediction process. Consequently, in many cases, traditional multi-linear regression models (MLR) are not good predictors and non-linear models may be a better alternative. Projection Pursuit is a powerful exploratory statistics technique, in which promising directions are found and data are projected on to these directions to reveal underlying relationships. In particular, Projection Pursuit Regression (PPR) finds several directions in which the variance explained by the projected data is maximised, which enables more accurate predictions to be made. In this paper we present a case study in which six geometallurgical response variables are modelled by PPR of primary properties. The results from the proposed PPR models show a significant improvement over those from MLR models. In addition, as the quantification of uncertainty is a key aspect of risk management, the models were bootstrapped to generate a distribution of feasible scenarios. Our results show that PPR is a robust technique for modelling geometallurgical response variables and their uncertainty.},
 address = {Santiago,Chile},
 author = {Sepulveda, Exequiel and Dowd, Peter and Xu, Chaoshui},
 booktitle = {11th International Mineral Precessing Conference},
-file = {:Users/esepulveda/Dropbox/Mendeley/Sepulveda, Dowd, Xu - 2015 - Modelling geometallurgical response variables using Projection Pursuit regression.pdf:pdf},
+file = {:home/a1634120/extrahd/Mendeley Desktop/2015 - Sepulveda, Dowd, Xu - Modelling geometallurgical response variables using Projection Pursuit regression.pdf:pdf},
 keywords = {Geometallurgical modelling,Projection Pursuit,Risk Management 2},
 title = {{Modelling geometallurgical response variables using Projection Pursuit regression}},
 year = {2015}
+}
+@article{perez2015acoustic,
+abstract = {The wear rate of working tools during the cutting and drilling of rocks is closely related to the abrasiveness of those rocks. As the contact area of the tools increases, due to wear, the specific cutting energy will also increase, and that directly affects the overall consumption of excavation tools. A new artificial intelligence (AI) based model has been developed. It utilizes acoustic emission (AE) and rock properties as main indicators of rock abrasivity, estimated by Cerchar Abrasivity Index (CAI). AE sensors are attached to both the Cerchar testing apparatus and the rock in question while conducting scratch tests using hardened steel pins of 42 and 56 HRC. Prior to the implementation of Artificial Neural Network (ANN) modeling, the selection of independent variables was carried out via Gamma test and V-ratio analyses. As a result, AE parameters, such as total number of events and root mean square of signal, in addition to testing parameters (i.e. uniaxial compressive strength, Young[U+05F3]s Modulus, quartz content and pin hardness) are found to be the optimum model input combination needed to accurately predict CAI.},
+author = {Perez, S and Karakus, M and Sepulveda, Exequiel},
+doi = {10.1016/j.wear.2015.10.006},
+file = {:home/a1634120/extrahd/Mendeley Desktop//2015 - Perez, Karakus, Sepulveda - A preliminary study on the role of acoustic emission on inferring Cerchar abrasivity index of rocks u.pdf:pdf;:home/a1634120/extrahd/Mendeley Desktop//2015 - Perez, Karakus, Sepulveda - A preliminary study on the role of acoustic emission on inferring Cerchar abrasivity index of rocks u.pdf:pdf},
+isbn = {0043-1648},
+issn = {00431648},
+journal = {Wear},
+keywords = {Acoustic emissions,Artificial neural networks,Cerchar abrasivity index,Rock abrasivity,Tool condition monitoring},
+mendeley-groups = {Geometallurgy},
+pages = {1--8},
+publisher = {Elsevier},
+title = {{A preliminary study on the role of acoustic emission on inferring Cerchar abrasivity index of rocks using artificial neural network}},
+url = {http://dx.doi.org/10.1016/j.wear.2015.10.006},
+volume = {344-345},
+year = {2015}
+}
+@inproceedings{baeza2012gpu,
+abstract = {Simulation of continuous variables is an important aspect in the construction of numerical models of Earth Sciences variables. In many cases, there is a need for high resolution models either to model large volumes or surfaces, or to characterize on a very dense grid some spatial phenomena. Traditional simulation algorithms such as turning bands and sequential Gaussian simulation must be adapted to handle such large models and to perform the computations in a reasonable time. Parallelization requires a review of the algorithm design. We present the changes and performance improvements of parallelizing the turning bands algorithm using graphical processing units (GPU). Our implementation focuses on parallelization of the unconditional simulation step. One example is presented comparing the performance of a serial simulation implementation versus our parallelized implementation of turning bands. Speed ups of up to 60 are reached and an analysis of possible additional improvements is presented.},
+author = {Baeza, Daniel and Sep{\'{u}}lveda, Exequiel and Ortiz, Juli{\'{a}}n},
+booktitle = {The Second European Conference on Geostatistics for Environmental Applications},
+pages = {7--11},
+title = {{Parallelization of simulation algorithm with GPU for constructing high- resolution models of Earth Sciences variables}},
+year = {2012}
+}
+@inproceedings{sepulveda2010kriging,
+abstract = {One of the most popular methods for the estimation of mineral resources is kriging. It allows estimating a variable in a block model from a set of conditioning data, making use of the spatial continuity, through the variogram. In many cases, these models consider tens of millions of blocks and are conditioned to hundreds of thousands samples. Therefore, any estimation software must be able to handle this amount of information, and, in addition, it must be capable of computing the model in a reasonable time. Most available softwares have been designed and implemented under a sequential programming paradigm, and consequently, do not take advantage of the available capacity offered by today's computers, based on multicore architectures. We propose a distributed-multiprocess implementation to improve the performance of this estimation algorithm, considering two main focuses: 1. Use of efficient algorithms for the different issues involved in the estimation by kriging (search and solving of systems of linear equations). 2. Implementation of the algorithm in a parallel setting, in order to distribute the computation effort in several processes. The first focus is approached using kd-trees and specific algorithms for the solution of systems of linear equations with symmetry. The second focus is resolved modifying the kriging algorithm to fit specific strategies for the use of multiple processes and distributing the computation load, reducing significantly the computation time for large estimation models. In addition to this, some tools are used for specific homogeneous systems of processors (clusters) to reduce even more the running time of the estimation. We show a case study to demonstrate the improvements in computation time from three different perspectives: 1) using the multicore capacity; 2) improving in a distributed framework (cluster); and 3) speed up due to the use of specific tools for a homogeneous cluster.},
+address = {Santiago},
+author = {Sep{\'{u}}lveda, Exequiel and Magri, Eduardo and Ortiz, Juli{\'{a}}n},
+booktitle = {The Fourth International Conference on Mining Innovation},
+editor = {Castro, Raul and Emery, Xavier and Kuyvenhoven, Romke},
+file = {:home/a1634120/extrahd/Mendeley Desktop/2010 - Sep{\'{u}}lveda, Magri, Ortiz - Distributed-Multiprocess Implementation of Kriging.pdf:pdf},
+pages = {49},
+title = {{Distributed-Multiprocess Implementation of Kriging}},
+year = {2010}
+}
+@inproceedings{sepulveda2010hybridknn,
+abstract = {The k-th nearest neighbour problem for 3D data has been widely studied, nevertheless, the surge of using GPU (Graphical Processing Unit) as general-purpose computing units opens up the need to design and implement new algorithms, that allow us to get results more rapidly than using conventional algorithms.},
+address = {Buenos Aires},
+author = {Sep{\'{u}}lveda, Exequiel and Munoz, Felipe},
+booktitle = {High Performace Computing - LATAM},
+file = {:home/a1634120/extrahd/Mendeley Desktop/2010 - Sep{\'{u}}lveda, Munoz - Hybrid KNN Algorithm using CPU and GPU applied on 3D data.pdf:pdf},
+pages = {3229--3233},
+title = {{Hybrid KNN Algorithm using CPU and GPU applied on 3D data}},
+year = {2010}
+}
+@inproceedings{ortiz2008innovations,
+address = {Santiago, Chile},
+author = {Ortiz, Juli{\'{a}}n and Sep{\'{u}}lveda, Exequiel and Barber{\'{a}}n, Antonio and Emery, Xavier and Magri, Eduardo},
+booktitle = {3rd International Conference on Mining Innovation},
+editor = {Arias, Jaime and Castro, Raul and Golosinski, Tadeusz},
+pages = {57--67},
+title = {{Innovations in Software Development for Resource Evaluation}},
+year = {2008}
 }
